--- a/package.json
+++ b/package.json
@@ -4,33 +4,42 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
+    "test": "jest --watchAll",
     "build": "tsc -p .",
-    "start": "ts-node --transpileOnly ./src/app.ts",
-    "dev": "nodemon ./src/app.ts"
+    "start": "ts-node --transpileOnly ./src/server.ts",
+    "dev": "nodemon ./src/server.ts"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.7",
+    "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "ts-node": "^10.9.1"
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.1.3",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "jest": "^29.6.4",
     "nodemon": "^2.0.22",
-    "typescript": "^5.1.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=14"
